Chnaged button to view quote

--- a/index1.html
+++ b/index1.html
@@ -36,7 +36,7 @@
           <div class="mainTitle">
               <h1 class="mainTitle" id="pageTitle">Tolkien LOTR Quotes</h1>
               <br>
-              <p class="mainTitle">Hello, please enjoy some of my favorite quotes from Tolkien's famous series, <span>The Lord of the Rings</span>.</p>
+              <p class="mainTitle">Hello, please enjoy some of my favorite quotes from Tolkien's famous series, <span><em> The Lord of the Rings</em></span>.</p>
             </div>
           </div>
         </section>
