Removed excess code from files

--- a/index1.html
+++ b/index1.html
@@ -40,8 +40,10 @@
             </div>
           </div>
         </section>
-	    <h2>Click to see some LOTR Quotes!</h2>
-	    <p id="lotr"></p>
+      <div id="quoteContainer">
+	      <h2>Click to see some LOTR Quotes!</h2>
+	      <p id="lotr"></p>
+      </div>
 	    <div id="buttonContainer">
 		    <button id="lotrButton">View the Precious!</button>
 	    </div>
