Temp add quote functionality created

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <form class="quoteForm" role="form">
             <input type="email" placeholder="Email Address">
             <input type="text" placeholder="Requested Date">
-            <textarea placeholder="Add Quote"></textarea>
+            <textarea id="textToArray" placeholder="Add Quote"></textarea>
             <button type="submit" class="button buttonRequest" id="sendButton">Send Request</button>
           </form>
         </div>
