Update quote submittal

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <h2>Add a Quote</h2>
           <p>Want to add some LOTR quotes yourself? Then please fill out the information below.</p>
           <form class="quoteForm" role="form">
-            <input type="email" placeholder="Email Address">
+            <input type="email" placeholder="Email Address" id="'email">
             <input type="text" placeholder="Requested Date">
             <textarea id="textToArray" placeholder="Add Quote"></textarea>
-            <button type="submit" class="button buttonRequest" id="sendButton">Send Request</button>
+            <button type="submit" class="button buttonRequest" id="sendButton">Submit</button>
           </form>
         </div>
       </section>
